fix map margin on mobile

--- a/src/style/scss/_entryView.scss
+++ b/src/style/scss/_entryView.scss
@@ -216,7 +216,7 @@
     @media (max-width: $medium-break) {
         clear: both;
         float: none;
-        margin: 0 auto;
+        margin: 20px auto 0 auto;
         // padding-top: 0;
         width: 100%;
     }
